[package]
name = "flagged_pointer"
version = "0.1.2"
edition = "2024"
publish = ["crates-io"]
description = "A safe abstraction for tagged pointers using unused bits for flags"
repository = "https://github.com/zhongyi51/flagged_pointer"
license = "MIT"
keywords = ["pointer", "tagged", "flags", "memory", "efficiency"]
categories = ["data-structures", "memory-management"]
readme = "README.md"

[dependencies]
enumflags2 = "0.7"
ptr_meta = "0.3"